Started TD Game

--- a/Haunted Zombie Rush/.vscode/launch.json
+++ b/Haunted Zombie Rush/.vscode/launch.json
@@ -2,23 +2,34 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch",
-      "type": "mono",
-      "request": "launch",
-      "program": "${workspaceRoot}/program.exe",
-      "args": [],
-      "cwd": "${workspaceRoot}",
-      "preLaunchTask": "",
-      "runtimeExecutable": null,
-      "env": {},
-      "externalConsole": false
+      "name": "Unity Editor",
+      "type": "unity",
+      "request": "launch"
     },
     {
-      "name": "Attach",
-      "type": "mono",
-      "request": "attach",
-      "address": "localhost",
-      "port": 55555
+      "name": "Windows Player",
+      "type": "unity",
+      "request": "launch"
+    },
+    {
+      "name": "OSX Player",
+      "type": "unity",
+      "request": "launch"
+    },
+    {
+      "name": "Linux Player",
+      "type": "unity",
+      "request": "launch"
+    },
+    {
+      "name": "iOS Player",
+      "type": "unity",
+      "request": "launch"
+    },
+    {
+      "name": "Android Player",
+      "type": "unity",
+      "request": "launch"
     }
   ]
 }
